fix: remove borda branca residual do autofill no dark mode

--- a/css/components.css
+++ b/css/components.css
@@ -485,7 +485,7 @@
 .form-group input:-webkit-autofill,
 .form-group input:-webkit-autofill:hover,
 .form-group input:-webkit-autofill:focus {
-  -webkit-box-shadow: 0 0 0px 1000px rgba(20,22,35,1) inset, 0 0 0 1px rgba(255,255,255,0.07);
+  -webkit-box-shadow: 0 0 0px 1000px rgba(20,22,35,1) inset;
   -webkit-text-fill-color: var(--text);
   caret-color: var(--text);
 }
